[package]
name = "rasters"
version = "0.7.0"
authors = ["Rajsekar Manokaran <rajsekar.manokaran@aspecscire.com>", "Madhav Manoj <madhav.manoj@aspecscire.com>"]
edition = "2018"
description = "Raster processing library"

homepage = "https://github.com/AspecScire/rasters.rs"
repository = "https://github.com/AspecScire/rasters.rs"
readme = "README.md"

documentation = "https://docs.rs/rasters"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Verify package.metadata.docs.rs when updating
use-rayon = ["rayon"]

[dependencies]

# Math and algo deps
ndarray = "0.13.1"
nalgebra = "0.18.1"

# GIS deps
gdal = "0.14"
geo = "0.18.0"

# Serialization
serde = "1.0.133"
serde_derive = "1.0.133"

# Error handling
anyhow = "1.0.52"

# Optional Dependencies
rayon = { version = "1.5.1", optional = true }

[workspace]
members = [
    "raster-tools",
]

[package.metadata.docs.rs]
all-features = true
# needed to get docs.rs to build gdal
rustc-args = ["--cfg", "docsrs"]
