[package]
name = "rasters"
version = "0.8.0"
authors = ["Rajsekar Manokaran <rajsekar.manokaran@aspecscire.com>", "Madhav Manoj <madhav.manoj@aspecscire.com>"]
edition = "2018"
description = "Raster processing library"

homepage = "https://github.com/AspecScire/rasters.rs"
repository = "https://github.com/AspecScire/rasters.rs"
readme = "README.md"

documentation = "https://docs.rs/rasters"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gdal"]
# Verify package.metadata.docs.rs when updating
use-rayon = ["rayon"]

[dependencies]

# Math and algo deps
ndarray = "0.15.6"
nalgebra = "0.31.4"

# GIS deps
gdal = { version = "0.16", optional = true }
geo = "0.28"

# Serialization
serde = "1.0.203"
serde_derive = "1.0.203"

# Error handling
anyhow = "1.0.86"

# Optional Dependencies
rayon = { version = "1.10.0", optional = true }
gdal-sys = { version = "0.9.1", features = ["bindgen"] }

[workspace]
members = [
    "raster-tools",
]

[package.metadata.docs.rs]
all-features = true
# needed to get docs.rs to build gdal
rustc-args = ["--cfg", "docsrs"]
