[package]
name = "raster-tools"
version = "0.7.0"
authors = ["Rajsekar Manokaran <rajsekar.manokaran@aspecscire.com>", "Madhav Manoj <madhav.manoj@aspecscire.com>"]
edition = "2018"
repository = "https://github.com/AspecScire/rasters.rs"
description = "Raster processing tools"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasters = { path = "..", version = "^0.7.0", features = ["use-rayon"] }
clap = "2.34.0"
indicatif = "0.13.0"
Inflector = "0.11.4"

rayon = "1.5.1"
spade = "1.8.2"

memmap = "0.7.0"

nalgebra = "0.18.1"
ndarray = { version = "0.13.1", features = ["serde-1"] }

# GIS deps
gdal = "0.11.0"
gdal-sys = "*"
geo = "0.18.0"

# Serialization
serde = "1.0.133"
serde_derive = "1.0.133"
serde_cbor = "0.11.2"
serde_json = "1.0.74"

# Error handling
anyhow = "1.0.52"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.4.6"
